fixed title overflowing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,9 +134,9 @@ code {
 }
 
 .posts > .post .title {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  white-space: normal; /* Allow wrapping */
+  overflow-wrap: break-word; /* Break long words */
+  max-width: 400px;
   color: var(--color-gray-50);
   width: 100%;
   min-width: 0;
@@ -166,6 +166,7 @@ code {
   font-size: 1rem;
   font-weight: 600;
   color: #a9a9a9;
+  max-width: 400px;
 }
 
 .content .header .date {
